--- a/client/cloud.jade
+++ b/client/cloud.jade
@@ -9,7 +9,7 @@ template(name='cloud')
         #clear_tags.ui.active.icon.zoomer.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.active.zoomer.button
+            .unselect_tag.ui.circular.black.zoomer.button
                 strong #{this}
     each all_tags
         +tag_selector
