--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,24 +1,24 @@
 template(name='nav')
     // a.icon.ui.big.circular.icon.button(href='/')
-    .ui.fluid.attached.five.item.borderless.menu.topnav
+    .ui.fluid.attached.five.item.borderless.grey.menu.topnav
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
             // a.icon.item.home2(href='/')
             //     i.big.yin.yang.icon
             a.icon.zoomer.item.clear_tags.users(href='/people' class="{{isActivePath regex='people'}}" title='people')
-                i.large.user.outline.grey.icon
-            a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActivePath regex='reddit'}}" title='reddit')
-                i.large.search.grey.icon
+                i.big.user.outline.grey.icon
             a.icon.zoomer.item.clear_tags.subreddits(href='/subreddits' class="{{isActivePath regex='subreddits'}}")
-                i.large.reddit.grey.icon
+                i.big.reddit.grey.icon
+            a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActivePath '/reddit'}}" title='search')
+                i.big.yin.yang.grey.icon
             a.icon.zoomer.item.clear_tags.stackexchange.clear_tags(href='/stack' class="{{isActivePath '/stack'}}")
-                i.large.stack.exchange.grey.icon
+                i.big.stack.exchange.grey.icon
             a.icon.zoomer.item.silence(href='#')
-                i.large.volume.mute.grey.icon
+                i.big.volume.mute.grey.icon
             // a.icon.disabled.item.goto_wikipedia(href='/wikipedia')
             //     i.large.wikipedia.icon
         unless connected
-            .spacer
-            i.yin.yang.loading.big.icon
-            +status    
+            .icon.item
+                i.yin.yang.grey.loading.big.icon
+            // +status    
