--- a/client/s.css
+++ b/client/s.css
@@ -165,19 +165,22 @@ html.ios body {
   border-top-left-radius: 10px !important;
 }
 
-.topnav.menu {
+.topnav.menu > .item {
+  border-radius: 20px !important;
+}
+/*.topnav.menu {*/
     /*border-radius: 0 0 10px 10px !important; */
     /*transition: background-color 3s ease !important;*/
     /*background-color: rgba(250,250,250,1) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
     /* opacity: .7 !important; */
-    overflow-y:hidden;
-    overflow-x:scroll;
+/*    overflow-y:hidden;*/
+/*    overflow-x:scroll;*/
     /* padding-top: .2em; */
     /* padding: .2em; */
     /*margin-bottom: 4em; */
-}
+/*}*/
 .hscroll {
     /*border-radius: 0 0 10px 10px !important; */
     transition: background-color 3s ease !important;
@@ -214,19 +217,19 @@ html.ios body {
     height: 1px !important;
    /*border-radius: 10px !important; */
 }
-.topnav::-webkit-scrollbar {
-    height: 1px !important;
+/*.topnav::-webkit-scrollbar {*/
+/*    height: 1px !important;*/
    /*border-radius: 10px !important; */
-}
+/*}*/
 
 
-@media screen and (max-width: 1100px) {
-  .overlay-text {
-    top: 550px;
-  }
-  .overlay-text-subheader {
-    top: 290px;
-  }
+/*@media screen and (max-width: 1100px) {*/
+/*  .overlay-text {*/
+/*    top: 550px;*/
+/*  }*/
+/*  .overlay-text-subheader {*/
+/*    top: 290px;*/
+/*  }*/
 }
 input
 
@@ -386,10 +389,10 @@ a.goto_article {
   box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
 }
-.menu > a.item :active {
-  box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
-}
+/*.menu > a.item :active {*/
+/*  box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.75);*/
+/*  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);*/
+/*}*/
 a.title, #title {
     color: black !important;
 }
