--- a/client/subreddits.jade
+++ b/client/subreddits.jade
@@ -3,9 +3,9 @@ template(name='subreddits')
         .row
             // .four.wide.column
             .sixteen.wide.column
-                a.ui.large.circular.basic.button(href="/reddit") 
-                    i.reddit.icon
-                    |reddit
+                // a.ui.large.circular.basic.button(href="/reddit") 
+                //     i.reddit.icon
+                //     |reddit
                 +cloud filter='subreddit'
                 .ui.inline.header.search_subs
                     |#{subreddit_docs.count} subs
@@ -14,15 +14,16 @@ template(name='subreddits')
                     input.search_subreddits(type='text')
                 .scrolling.ui.items
                     unless subreddit_docs.count
-                        i.massive.yin.yang.loading.icon
+                        .ui.center.aligned.basic.segment
+                            i.massive.yin.yang.grey.loading.icon
                     each subreddit_docs
                         .ui.item  
                             a.ui.tiny.image.goto_sub(href="/subreddit/#{data.display_name}")
                                 img.ui.rounded.zoomer.image(src=data.icon_img)
-                            .content
+                            .content.say_this
                                 a.header.goto_sub(href="/subreddit/#{data.display_name}")
-                                    | #{data.display_name}
-                                span.description #{data.public_description}
+                                    | !{data.display_name}
+                                span.description !{data.public_description}
                                     if in_dev
                                         +print_this
 
